Tạo views cho trang giỏ hàng và controller load dữ liệu cho giỏ hàng, chỉnh sửa thông tin sản phẩm trong giỏ hàng.
Sửa trang chủ để mua sản phẩm khi đăng nhập.
Sửa phần đăng kí, đăng nhập để bắt lỗi và trả về thông báo.

--- a/public/assets/css/product.css
+++ b/public/assets/css/product.css
@@ -37,9 +37,13 @@
 
 .card-img-top {
 	height: 200px;
-	width: 100px;
-	width: 100%;
+	width: 200px;
 }
+
 .card-li{
 	text-align: center;
+}
+
+.btn {
+	width: 85px;
 }
