--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -1,4 +1,4 @@
-.maincontent-area {
+.main-container {
   padding-bottom: 40px; padding-top:20px;
 }
 
@@ -20,18 +20,11 @@
   color: #FFF; background: #28608F;
 }
 
-.brand-list {
-  padding-top: 40px;
-}
-.brand-list .owl-nav {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.section-title {
+.top-title {
+  background-color: white;
+  padding: 10px;
   font-family: sans-serif;
-  font-size: 40px;
+  font-size: 36px;
   font-weight: 100;
   margin-bottom: 20px;
   text-align: center;
