--- a/public/assets/css/register.css
+++ b/public/assets/css/register.css
@@ -1,14 +1,18 @@
-.pane-header {
+.header-title {
 	margin-top: 30px;
 	margin-bottom: 10px;
 }
 
-.container-custom {
+.my-container {
 	margin-left: 15%;
 	margin-right: 15%;
 }
 
-.white-background {
+.footer {
+	margin-bottom: 100px;
+}
+
+.body-container {
 	background-color: white;
 	padding: 30px;
 }
@@ -22,38 +26,11 @@
 	margin-bottom: 4px;
 }
 
-.row.no-gutter {
-	margin-left: 0;
-	margin-right: 0;
-}
-
-.row.no-gutter [class*='col-']:not(:first-child),
-.row.no-gutter [class*='col-']:not(:last-child) {
-	padding-right: 0;
-	padding-left: 0;
-}
-
 .box {
 	height: 40px !important;
 }
 
-#day {
-	width: 70px;
-}
-
-#month {
-	width: 70px;
-}
-
-#year {
-	width: 120px;
-}
-
-#male {
-	width: 100%;
-}
-
-#btn-sign-up {
+.btn-register {
 	margin-top: 36px;
 	width: 100%;
 	height: 40px;
@@ -67,5 +44,5 @@
 }
 
 .g-recaptcha {
-	margin-top: 54px;
+	margin-top: 34px;
 }
