--- a/views/_layouts/main.handlebars
+++ b/views/_layouts/main.handlebars
@@ -49,7 +49,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				{{#if layoutVM.isLogged}}
 				<form id="frmLogout" method="post" action="/account/logout"></form>
-				<li><a href="/cart">GIỎ HÀNG</a></li>
+				<li><a href="/cart">GIỎ HÀNG({{layoutVM.cartQuantity}})</a></li>
 				<li class="dropdown">
 					<a class="dropdown-toggle" data-toggle="dropdown" href="cap-nhat-thong-tin.html">
 						{{upper_case layoutVM.user.f_Name}}
