--- a/views/product/byMan.hbs
+++ b/views/product/byMan.hbs
@@ -3,7 +3,7 @@
 {{/section}}
 {{#section 'css'}}
 <link rel="stylesheet" type="text/css" href="/assets/css/index.css">
-<link rel="stylesheet" type="text/css" href="/assets/css/san-pham.css">
+<link rel="stylesheet" type="text/css" href="/assets/css/product.css">
 <link rel="stylesheet" type="text/css" href="/assets/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="/assets/css/owl.carousel.css">
 <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css">
