Hiển thị danh sách sản phẩm, danh mục, nhà sản xuất và đơn hàng trong phần quản trị

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -14,14 +14,18 @@
 	width: 400px
 }
 
-#search-btn {
-	width: 50px;
-}
-
 #price_filter{
 	width: 100px;
 }
 
 .dropdown:hover>.dropdown-menu {
 	display: block;
+}
+
+.td_center{
+	text-align: center;
+}
+
+.td_bold{
+	font-weight: bold;
 }
