Hoàn thành phân hệ admin

--- a/views/admin/category/index.hbs
+++ b/views/admin/category/index.hbs
@@ -18,7 +18,7 @@
 			<td class="td_center td_bold">{{CatID}}</td>
 			<td class="td_center">{{CatName}}</td>
 			<td>
-				<a class="btn btn-warning btn-sm" href="/admin/category/edit?{{CatID}}" role="button">
+				<a class="btn btn-warning btn-sm" href="/admin/category/edit?id={{CatID}}" role="button">
 					<span class="glyphicon glyphicon-edit"></span>	
 				</a>
 			</td>
