--- a/views/admin/product/index.hbs
+++ b/views/admin/product/index.hbs
@@ -32,10 +32,10 @@
 			<td>{{Origin}}</td>
 			<td>
 				<a class="btn btn-warning btn-sm" href="/admin/product/edit?id={{ProID}}" role="button">
-					<span class="glyphicon glyphicon-edit"></span>	
+					<span class="glyphicon glyphicon-edit"></span>
 				</a>
 				<a class="btn btn-danger btn-sm" href="/admin/product/delete?id={{ProID}}" role="button">
-					<span class="glyphicon glyphicon-remove"></span>
+					<span class="glyphicon glyphicon-trash"></span>
 				</a>
 			</td>
 		</tr>
