--- a/views/_layouts/admin.handlebars
+++ b/views/_layouts/admin.handlebars
@@ -6,6 +6,7 @@
 		<title>Quản trị</title>
 		<link rel="stylesheet" type="text/css" href="/assets/bootstrap-3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+		{{{_sections.css}}}
 	</head>
 	<body style="background-color: whitesmoke">
 		<div class="container-fluid">
@@ -40,7 +41,8 @@
 			</div>
 		</div>
 		
-		<script type="text/javascript" src="/assets/jquery-3.1.1.min.js"></script>
+		<script type="text/javascript" src="/assets/js/jquery-3.1.1.min.js"></script>
 		<script type="text/javascript" src="/assets/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+		{{{_sections.js}}}
 	</body>
 </html>
