--- a/views/admin/manufacturer/add.hbs
+++ b/views/admin/manufacturer/add.hbs
@@ -2,4 +2,26 @@
 	<h3>Thêm nhà sản xuất</h3>
 {{/section}}
 
-//chưa thực hiện
+{{#section 'css'}}
+<link rel="stylesheet" type="text/css" href="/assets/css/register.css">
+{{/section}}
+<form action="" method="POST" style="margin: 30px">
+	<div class="row">
+		<div class="col-lg-6">
+			<div class="head-box-title">Tên nhà sản xuất</div>
+			<input name="ManName" type="text" class="form-control box" placeholder="Nhập tên nhà sản xuất" required>
+			<div class="row">
+				<div class="col-lg-6">
+					<button class="btn btn-success btn-register" type="submit">
+					<span class="glyphicon glyphicon-edit"></span> Thêm nhà sản xuất
+					</button>
+				</div>
+				<div class="col-lg-6">
+					<button type="button" onclick="$(location).attr('href', '/admin/manufacturer/index')" class="btn btn-primary btn-register">
+					<span class="glyphicon glyphicon-list"></span> Quay lại
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</form>
