--- a/views/admin/order/edit.hbs
+++ b/views/admin/order/edit.hbs
@@ -1,5 +1,40 @@
 {{#section 'title'}}
-	<h3>Quản lý đơn hàng</h3>
+<h3>Quản lý đơn hàng</h3>
 {{/section}}
-
-//chưa thực hiện
+{{#section 'css'}}
+<link rel="stylesheet" type="text/css" href="/assets/css/register.css">
+{{/section}}
+{{#with order}}
+<form action="" method="POST" style="margin: 30px">
+	<div class="row">
+		<div class="col-lg-6">
+			<div class="head-box-title">Mã đơn hàng</div>
+			<input name="OrderID" type="text" class="form-control box" value="{{OrderID}}" readonly>
+			<div class="box-title">Ngày đặt hàng</div>
+			<input name="OrderDate" type="text" class="form-control box" value="{{OrderDate}}" readonly>
+			<div class="box-title">Người đặt</div>
+			<input name="UserID" type="text" class="form-control box" value="{{UserID}}" readonly>
+			<div class="box-title">Tổng tiền</div>
+			<input name="Total" type="text" class="form-control box" value="{{number_format Total}}" readonly>
+			<div class="box-title">Tình trạng đơn hàng</div>
+			<select name="State" class="form-control box">
+				{{#each ../ states}}
+				<option value="{{stt}}">{{sttString}}</option>
+				{{/each}}
+			</select>
+			<div class="row">
+				<div class="col-lg-6">
+					<button class="btn btn-success btn-register" type="submit">
+					<span class="glyphicon glyphicon-edit"></span> Chỉnh sửa
+					</button>
+				</div>
+				<div class="col-lg-6">
+					<button type="button" onclick="$(location).attr('href', '/admin/order/index')" class="btn btn-primary btn-register">
+					<span class="glyphicon glyphicon-list"></span> Quay lại
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</form>
+{{/with}}
