--- a/views/_layouts/main.handlebars
+++ b/views/_layouts/main.handlebars
@@ -51,12 +51,12 @@
 				<form id="frmLogout" method="post" action="/account/logout"></form>
 				<li><a href="/cart">GIỎ HÀNG({{layoutVM.cartQuantity}})</a></li>
 				<li class="dropdown">
-					<a class="dropdown-toggle" data-toggle="dropdown" href="cap-nhat-thong-tin.html">
+					<a class="dropdown-toggle" data-toggle="dropdown" href="/account/profile">
 						{{upper_case layoutVM.user.f_Name}}
 					</a>
 					<ul class="dropdown-menu">
-						<li><a href="/account/information" onclick="">Cập nhật thông tin</a></li>
-						<li><a href="/account/history" onclick="">Lịch sử mua hàng</a></li>
+						<li><a href="/account/profile" onclick="">Cập nhật thông tin</a></li>
+						<li><a href="/account/order" onclick="">Lịch sử mua hàng</a></li>
 						<li><a id="lnkLogout" href="javascript:;">Đăng xuất</a></li>
 					</ul>
 				</li>
