--- a/views/_layouts/main.handlebars
+++ b/views/_layouts/main.handlebars
@@ -56,7 +56,11 @@
 					</a>
 					<ul class="dropdown-menu">
 						<li><a href="/account/profile" onclick="">Cập nhật thông tin</a></li>
-						<li><a href="/account/order" onclick="">Lịch sử mua hàng</a></li>
+						{{#if layoutVM.isAdminLogged}}
+							<li><a href="/admin/product/index" onclick="">Quản trị</a></li>
+						{{else}}
+							<li><a href="/account/order" onclick="">Lịch sử mua hàng</a></li>
+						{{/if}}
 						<li><a id="lnkLogout" href="javascript:;">Đăng xuất</a></li>
 					</ul>
 				</li>
