--- a/views/_layouts/main.handlebars
+++ b/views/_layouts/main.handlebars
@@ -14,11 +14,11 @@
 					<img id="logo-image" src="/image/logo.png">
 				</a>
 			</div>
-			<form class="navbar-form navbar-left" action="javascript:void(0);">
+			<form class="navbar-form navbar-left" method="get" action="/product/search">
 				<div class="input-group">
-					<input  id="search-box" type="text" class="form-control" placeholder="Bạn tìm gì...">
+					<input  id="search-box" name="content" type="text" class="form-control" placeholder="Bạn tìm gì...">
 					<div class="input-group-btn">
-						<button id="search-btn" class="btn btn-default" onclick="">
+						<button id="search-btn" class="btn btn-default" type="submit">
 							<i class="glyphicon glyphicon-search"></i>
 						</button>
 					</div>
