--- a/views/product/category.hbs
+++ b/views/product/category.hbs
@@ -1,6 +1,3 @@
-  {{#section 'title'}}
-	Product List
-{{/section}}
 {{#section 'css'}}
 <link rel="stylesheet" type="text/css" href="/assets/css/index.css">
 <link rel="stylesheet" type="text/css" href="/assets/css/product.css">
@@ -10,11 +7,14 @@
 {{/section}}
 {{#if noProducts}}
 <div class="row">
-	<div class="col-sm-12 col-md-12 col-lg-12">
-		Không có sản phẩm thoả yêu cầu.
-	</div>
+  <div class="col-sm-12 col-md-12 col-lg-12">
+    Không có sản phẩm thoả yêu cầu.
+  </div>
 </div>
 {{else}}
+<form id="frmAddToCart" method="post" action="/product">
+    <input id="txtProId" type="hidden" name="proId">
+</form>
 <div class="container">
     <div class="center-block">
         <div class="row" >
@@ -27,10 +27,16 @@
                         <p class="price">
                             <strong>{{number_format Price}}₫</strong>
                         </p>
-                        <a href="/product/detail/{{ProID}}" class="btn btn-primary">Chi tiết</a>
-                        <a href="#" class="btn btn-danger" role="button">
-                            <span class="glyphicon glyphicon-shopping-cart"></span>
+                        <a href="/product/detail/{{ProID}}" class="btn btn-primary">
+                            <span class="glyphicon glyphicon-search"></span>
+                            Chi tiết 
                         </a>
+                        {{#if ../layoutVM.isLogged}}
+                        <a class="btn btn-danger lnkAdd" href="javascript:;" role="button" data-proid="{{ProID}}">
+                            <span class="glyphicon glyphicon-shopping-cart"></span>
+                            Mua
+                        </a>
+                        {{/if}}
                     </div>
                 </div>
             </div>
@@ -73,4 +79,26 @@
 <!-- Slider -->
 <script type="text/javascript" src="/assets/js/bxslider.min.js"></script>
 <script type="text/javascript" src="/assets/js/script.slider.js"></script>
+
+<script type="text/javascript">
+    $('.lnkAdd').on('click', function() {
+        var id = $(this).data('proid');
+        $('#txtProId').val(id);
+        $('#frmAddToCart').submit();
+    });
+
+    $('#body').css('opacity', 0);
+    $(window).load(function() {
+        $('#body').css('opacity', 1);
+    });
+</script>
+
+{{#if isAlert}}
+<script type="text/javascript">
+    setTimeout(function() {
+        alert("{{alertMessage}}");
+    }, 300);
+    
+</script>
+{{/if}}
 {{/section}}
