Thêm chức năng xoá danh mục và nhà sản xuất

--- a/views/admin/category/index.hbs
+++ b/views/admin/category/index.hbs
@@ -21,6 +21,9 @@
 				<a class="btn btn-warning btn-sm" href="/admin/category/edit?id={{CatID}}" role="button">
 					<span class="glyphicon glyphicon-edit"></span>	
 				</a>
+				<a class="btn btn-danger btn-sm" href="/admin/category/delete?id={{CatID}}" role="button">
+					<span class="glyphicon glyphicon-trash"></span>
+				</a>
 			</td>
 		</tr>
 		{{/each}}
