--- a/views/_layouts/admin.handlebars
+++ b/views/_layouts/admin.handlebars
@@ -12,7 +12,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<nav id="navbar" class="navbar navbar-inverse navbar-static-top"">
-					<div class="container">
+					<div class="container-fluid">
 						<div class="navbar-header">
 							<a id="logo-link" class="navbar-brand" href="">
 								<img id="logo-image" src="/image/logo.png" alt="logo">
