--- a/views/admin/manufacturer/index.hbs
+++ b/views/admin/manufacturer/index.hbs
@@ -22,6 +22,9 @@
 				<a class="btn btn-warning btn-sm" href="/admin/manufacturer/edit?id={{ManID}}" role="button">
 					<span class="glyphicon glyphicon-edit"></span>	
 				</a>
+				<a class="btn btn-danger btn-sm" href="/admin/manufacturer/delete?id={{ManID}}" role="button">
+					<span class="glyphicon glyphicon-trash"></span>
+				</a>
 			</td>
 		</tr>
 		{{/each}}
